Update Keycloak and PostgreSQL manifests to use simplified port mappings

--- a/keycloak/manifest.json
+++ b/keycloak/manifest.json
@@ -13,7 +13,5 @@
     "KC_DB_PASSWORD"
   ],
   "enable": ["postgres"],
-  "ports": [
-    { "name": "http", "container": 8080, "protocol": "tcp", "primary": true }
-  ]
+  "ports": ["9090:8080"]
 }
