--- a/keycloak/manifest.json
+++ b/keycloak/manifest.json
@@ -1,7 +1,7 @@
 {
   "container": "quay.io/keycloak/keycloak:24.0",
   "about": "Keycloak identity provider used to secure Ploinky workspaces via SSO.",
-  "agent": "/opt/keycloak/bin/kc.sh start-dev --http-port=8080 --hostname-strict=false",
+  "agent": "start-dev --http-port=8080 --hostname-strict=false",
   "cli": "/opt/keycloak/bin/kc.sh",
   "env": [
     "KEYCLOAK_ADMIN",
