--- a/keycloak/manifest.json
+++ b/keycloak/manifest.json
@@ -5,13 +5,7 @@
   "cli": "/opt/keycloak/bin/kc.sh",
   "env": [
     "KEYCLOAK_ADMIN",
-    "KEYCLOAK_ADMIN_PASSWORD",
-    "KC_DB",
-    "KC_DB_URL_HOST",
-    "KC_DB_URL_DATABASE",
-    "KC_DB_USERNAME",
-    "KC_DB_PASSWORD"
+    "KEYCLOAK_ADMIN_PASSWORD"
   ],
-  "enable": ["postgres"],
   "ports": ["9090:8080"]
 }
