Restore agent command - docker.js now handles it correctly

--- a/keycloak/manifest.json
+++ b/keycloak/manifest.json
@@ -1,12 +1,11 @@
 {
   "container": "quay.io/keycloak/keycloak:24.0",
   "about": "Keycloak identity provider used to secure Ploinky workspaces via SSO.",
+  "agent": "start-dev --http-port=8080 --hostname-strict=false",
   "cli": "/opt/keycloak/bin/kc.sh",
   "env": [
     "KEYCLOAK_ADMIN",
-    "KEYCLOAK_ADMIN_PASSWORD",
-    "KC_HTTP_PORT",
-    "KC_HOSTNAME_STRICT"
+    "KEYCLOAK_ADMIN_PASSWORD"
   ],
   "ports": ["9090:8080"]
 }
