Add volume mapping for Keycloak data in manifest.json

--- a/keycloak/manifest.json
+++ b/keycloak/manifest.json
@@ -7,5 +7,8 @@
     "KEYCLOAK_ADMIN",
     "KEYCLOAK_ADMIN_PASSWORD"
   ],
-  "ports": ["9090:9090"]
+  "ports": ["9090:9090"],
+  "volumes": {
+    ".ploinky/keycloak-data": "/opt/keycloak/data"
+  }
 }
